--- a/index.html
+++ b/index.html
@@ -4,31 +4,57 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Кнопки по макету №1</title>
+    <title>Форма по макету №1</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="conteiner">
-    <div class="conteiner-block">
-      <a class="link-underscore" href="#">Основные блюда </a>
+    <div class="conteiner-over">
+      <form
+        class="conteiner-form"
+        action="#"
+        method="post"
+        enctype="multipart/form-data"
+      >
+        <div class="button-form__close">
+          <button tabindex="4" type="reset" class="button__close"></button>
+        </div>
+        <h2 class="form-title">мы свяжемся с&nbsp;вами</h2>
+        <div class="form">
+          <div class="form__input">
+            <div class="form__item">
+              <input
+                class="form-text__input"
+                tabindex="1"
+                type="text"
+                name="username"
+                value=""
+                placeholder="Ваше Имя"
+              />
+            </div>
+            <div class="form__item">
+              <input
+                class="form-text__input"
+                tabindex="2"
+                type="tel"
+                name="usertel"
+                value=""
+                placeholder="Номер телефона"
+              />
+            </div>
+          </div>
+          <div class="form-button">
+            <button tabindex="3" class="button" type="submit">отправить</button>
+          </div>
+        </div>
+        <img class="form__logo" src="./img/logo.svg" alt="логотип" />
+      </form>
     </div>
-    <div class="conteiner-block">
-      <a class="conteiner__basket" href="#"><span>КОРЗИНА</span></a>
-    </div>
-    <div class="conteiner-block">
-      <button class="conteiner-buy">КУПИТЬ</button>
-    </div>
-    <div class="counter conteiner-block">
-      <button class="counter__minus" type="submit"></button>
-      <p class="counter__meaning">1</p>
-      <button class="counter__plus" type="submit"></button>
-    </div>
-    <button></button>
   </body>
 </html>
